added the component ProductCardList in App.tsx

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,17 @@
   padding: 2rem;
   text-align: center;
 }
+
+.product-photo {
+  width: 15em;
+  height: 12em;
+  border-radius: 10px 10px 0 0;
+}
+
+.product-card {
+  margin: 1em;
+  width: 15em;
+  height: 17em;
+  border-radius: 10px;
+  background-color: white;
+}
