--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,17 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --color-01: #efefef;
+  --color-02: #5c5b5b;
+  --color-03: #f79b2e;
+  --color-04: #f87ab8;
+  --color-05: #e1358d;
 }
 
 a {
@@ -29,9 +31,22 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: var(--color-01);
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+h4 {
+  margin: 0.5em;
+}
+
+p {
+  margin: 0.2em;
+}
+
+img {
+  object-fit: cover;
 }
