--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
+/* style of homepage */
 
 .product-photo {
   width: 15em;
@@ -17,4 +17,24 @@
   height: 17em;
   border-radius: 10px;
   background-color: white;
+}
+
+/* style of homepage */
+header {
+  margin: auto;
+  width: 100vw;
+  height: 3em;
+  display: flex;
+}
+
+nav {
+  margin: auto;
+}
+.header-link {
+  margin: auto;
+  padding: 0.3em;
+}
+
+.active {
+  background-color: red;
 }
