fixed some problems

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,11 @@ nav {
 .active {
   background-color: red;
 }
+
+/* style of userAccount */
+.order-list {
+  margin: 1em;
+  width: 15em;
+  height: 8em;
+  background-color: wheat;
+}
