updated the Favorite page and fixed some bugs

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,8 @@ nav {
   height: 8em;
   background-color: wheat;
 }
+
+/* style of components */
+.aktive-favorite-button {
+  background-color: pink;
+}
