added some context and elements to make the page better

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,10 @@ nav {
   background-color: red;
 }
 
+.description-photo {
+  width: 15em;
+}
+
 /* style of userAccount */
 .order-list {
   margin: 1em;
