--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   -webkit-text-size-adjust: 100%;
 
   --color-01: #efefef;
-  --color-02: #5c5b5b;
+  --color-02: #c1bebe;
   --color-03: #f79b2e;
   --color-04: #f87ab8;
   --color-05: #e1358d;
@@ -18,11 +18,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -31,18 +27,31 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: var(--color-01);
+  background-color: var(--color-02);
+}
+
+main {
+  margin-top: 4em;
+  margin: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
   margin: auto;
-  margin-left: 0.5em;
-  font-size: 1.5em;
-  line-height: 1.1;
+  text-align: left;
+  font-size: 1em;
+  color: white;
+}
+
+h3 {
+  margin: 0.2em 1em;
+  color: var(--color-03);
 }
 
 h4 {
-  margin: 0.5em;
+  margin: 0.2em 1em;
 }
 
 p {
