--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-}
-/* style
-
-
-
 /* style of userAccount */
 .order-list {
   margin: 1em;
@@ -14,7 +6,13 @@
   background-color: wheat;
 }
 
-/* style of components */
-.aktive-favorite-button {
-  background-color: pink;
-}
+/* .test {
+  width: 80%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas:
+    "h4 DeleteButton"
+    "p DeleteButton"
+    "QuantityChangeContainer QuantityChangeContainer";
+} */
