--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
 main {
   margin-top: 4em;
   margin: 0;
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
 }
@@ -55,7 +55,7 @@ h4 {
 }
 
 p {
-  margin: 0.2em;
+  margin: 0.2em 1em;
 }
 
 img {
