styled the pages, making the pages compatible with differentdevices

--- a/src/App.css
+++ b/src/App.css
@@ -12,4 +12,7 @@
 .slide-in-show {
   transform: translateX(0);
   transition: transform 1s ease-in-out;
+  @media screen and (min-width: 600px) {
+    transform: translateX(-40%);
+  }
 }
