--- a/src/index.css
+++ b/src/index.css
@@ -36,10 +36,14 @@ main {
   width: 100vw;
   display: flex;
   flex-direction: column;
+  @media screen and (min-width: 600px) {
+    margin: 4m 5%;
+  }
 }
 
 h1 {
   margin: auto;
+  margin-left: 1.5em;
   text-align: left;
   font-size: 1em;
   color: white;
@@ -57,6 +61,12 @@ h3 {
 
 h4 {
   margin: 0.2em 1em;
+}
+
+h5 {
+  font-size: 1.2em;
+  margin: auto;
+  padding: 1em;
 }
 
 p {
